--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,7 @@
 @import 'blocks/intro';
 /* Video */
 @import 'blocks/video';
+/* Programs */
+@import 'blocks/programs';
+/* Banner 1 */
+@import 'blocks/banner1';
