2 блока, адаптив, слайдер

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,5 +17,9 @@
 @import 'blocks/video';
 /* Programs */
 @import 'blocks/programs';
-/* Banner 1 */
+/* Banner #1 */
 @import 'blocks/banner1';
+/* Partners */
+@import 'blocks/partners';
+/* Banner #2 */
+@import 'blocks/banner2';
