--- a/scss/blocks/_video.scss
+++ b/scss/blocks/_video.scss
@@ -1,7 +1,7 @@
 .video {
   padding-top: 54px;
   padding-bottom: 100px;
-  background: url('/img/video/video-bg.png');
+  background: url('../img/video/video-bg.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: 100% 40%;
