--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,10 @@
 .header {
   background: #FFFFFF;
   box-shadow: 0px 5px 20px rgba(28, 28, 28, 0.1);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   z-index: 1000;
 
   &-contact {
@@ -174,7 +178,7 @@
 .burger-menu__active .burger-menu__lines::before {
   top: 0;
   transform: rotate(45deg);
-  background: #FFFFFF;
+  background: #23283B;
   width: 30px;
 
   transition: .2s;
@@ -183,7 +187,7 @@
 .burger-menu__active .burger-menu__lines::after {
   top: 0;
   transform: rotate(-45deg);
-  background: #FFFFFF;
+  background: #23283B;
   transition: .2s;
   width: 30px;
 }
@@ -195,7 +199,7 @@
   position: absolute;
   max-width: 30px;
   height: 2px;
-  background: #000000;
+  background: #23283B;
   border-radius: 0px;
 }
 
@@ -225,7 +229,7 @@
   display: flex;
   flex-flow: column;
   height: 100vh;
-  background: #000000;
+  background: #FFFFFF;
   overflow-y: auto;
   right: -100%;
   width: 100vw;
@@ -235,19 +239,76 @@
   margin-block-start: 0;
   margin-block-end: 0;
   margin-inline-start: 0px;
+  padding-bottom: 38px;
 
   transition: 0.5s;
 
   li {
-    list-style-type: none;
-    margin-bottom: 34px;
+    margin-bottom: 24px;
     text-align: center;
   }
 
   ul {
-    list-style-type: none;
-    padding-inline-start: 15px;
-    padding-top: 30%;
+    padding-top: 114px;
+  }
+
+  &__button {
+    display: flex;
+    justify-content: center;
+
+    .button--primary {
+      display: flex;
+      align-items: center;
+      padding: 14px 28px;
+      border-radius: 40px;
+
+      img {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  &__low {
+    width: 100%;
+    border-top: 1px solid #DEDEFF;
+    margin-top: 36px;
+    padding-top: 36px;
+  }
+
+  &__phone {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 18px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &__icon {
+      margin-right: 12px;
+    }
+
+    &__num {
+      font-family: Roboto;
+      font-weight: 900;
+      font-size: 14px;
+    }
+  }
+
+  &__social {
+    display: flex;
+    justify-content: center;
+    margin-top: 18px;
+
+    &__item {
+      margin-right: 20px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
 
@@ -257,11 +318,9 @@
 }
 
 .burger__link {
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  color: #F2F2FF;
+  color: #23283B;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .burger-menu__overlay {
