--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -8,6 +8,7 @@
   height: 100%;
   overflow: hidden;
   background-color: rgba(35, 40, 59, .7);
+  z-index: 1100;
 
   &-dialog {
     max-width: 770px;
@@ -103,6 +104,37 @@
           padding: 16px 88px;
           width: 100%;
           border-radius: 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .modal {
+    &-dialog {
+    }
+
+    &-content {
+      justify-content: center;
+      padding: 52px 24px;
+      width: 95%;
+      margin: 0 auto;
+
+      &__photo {
+        display: none;
+      }
+
+      &__form {
+        padding: 0px;
+        width: 100%;
+
+        &__title {
+          text-align: center;
+        }
+
+        &__text {
+          text-align: center;
         }
       }
     }
